--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>1</title>
+    <title>2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.5, maximum-scale=1">
     <link rel="stylesheet" href="css/nft-style.css">
 </head>
@@ -11,9 +11,9 @@
 <body>
 
  
-    <video loop autoplay muted webkit-playsinline playsinline crossOrigin="anonymous" id="arvideo">
+<!--     <video loop autoplay muted webkit-playsinline playsinline crossOrigin="anonymous" id="arvideo">
         <source src="https://johnnychiutw.github.io/test61/4.mp4" type='video/mp4'>
-    </video>
+    </video> -->
 
     <script src="js/third_party/three.js/three.min.js"></script>
     <script src="js/ARnftThreejs.js"></script>
@@ -53,7 +53,8 @@
                     let nftAddTJS = new ARnftThreejs.NFTaddTJS(nft.uuid);
                     // Set width, height and width and height number of segments of the PlaneGeometry.
                     let imgConfig = {w: 1, h: 1, ws: 1, hs: 1};
-                    nftAddTJS.addVideo('arvideo', 'pinball', 180, imgConfig, false);
+                    nftAddTJS.addImage('4.jpg', 'pinball', 0xbbbbff, 180, imgConfig, false);
+//                     nftAddTJS.addVideo('arvideo', 'pinball', 180, imgConfig, false);
 
                     const tick = () => {
                         sceneThreejs.draw();
