--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>5</title>
+    <title>6</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.5, maximum-scale=1">
     <link rel="stylesheet" href="css/nft-style.css">
 </head>
@@ -71,7 +71,7 @@
 
                     start(
                         container,
-                        markers['greenlight'],
+                        markers['4smallnew'],
                         video,
                         video.videoWidth,
                         video.videoHeight,
