--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>6</title>
+    <title>7</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.5, maximum-scale=1">
     <link rel="stylesheet" href="css/nft-style.css">
 </head>
@@ -15,74 +15,59 @@
         <source src="https://johnnychiutw.github.io/test61/4.mp4" type='video/mp4'>
     </video> -->
     
-    <div id="app">
-        <video loop autoplay muted playsinline id="video">
-        </video>
-
-        <canvas id="canvas"></canvas>
-    </div>
+     <video loop autoplay muted webkit-playsinline playsinline crossOrigin="anonymous" id="arvideo">
+        <source src="https://johnnychiutw.github.io/test61/4.mp4" type='video/mp4'>
+    </video>
 
     <script src="js/third_party/three.js/three.min.js"></script>
     <script src="js/ARnftThreejs.js"></script>
     <script src="dist/ARnft.js"></script>
 
     <script>
-       /**
-         * APP / ELEMENTS
-         */
-        var container = document.getElementById('app');
-        var video = document.getElementById('video');
-        var canvas = document.getElementById('canvas');
+        ARnft.ARnft.init(640, 480, ["examples/DataNFT/pinball"], ['pinball'], 'config.json', true)
+            .then((nft) => {
+                document.addEventListener('containerEvent', function (ev) {
 
-        /**
-         * APP / VIDEO STREAM
-         */
+                    let canvas = document.getElementById('canvas');
+                    let fov = 0.8 * 180 / Math.PI;
+                    let ratio = window.clientWidth / window.clientHeight;
+                    let config = {
+                        "renderer": {
+                            "alpha": true,
+                            "antialias": true,
+                            "context": null,
+                            "precision": "mediump",
+                            "premultipliedAlpha": true,
+                            "stencil": true,
+                            "depth": true,
+                            "logarithmicDepthBuffer": true
+                        },
+                        "camera": {
+                            "fov": fov,
+                            "ratio": ratio,
+                            "near": 0.01,
+                            "far": 1000
+                        }
+                    }
 
-        if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-            var hint = {
-                audio: false,
-                video: true
-            };
-            if (window.innerWidth < 800) {
-                var width = (window.innerWidth < window.innerHeight) ? 240 : 360;
-                var height = (window.innerWidth < window.innerHeight) ? 360 : 240;
+                    let sceneThreejs = new ARnftThreejs.SceneRendererTJS(config, canvas, nft.uuid,
+                        true);
+                    sceneThreejs.initRenderer();
 
-                var aspectRatio = window.innerWidth / window.innerHeight;
+                    let nftAddTJS = new ARnftThreejs.NFTaddTJS(nft.uuid);
+                    // Set width, height and width and height number of segments of the PlaneGeometry.
+                    let imgConfig = {w: 1, h: 1, ws: 1, hs: 1};
+                    nftAddTJS.addVideo('arvideo', 'pinball', 180, imgConfig, false);
 
-                console.log("window WxH:", width, height);
-
-                hint = {
-                    audio: false,
-                    video: {
-                        facingMode: 'environment',
-                        width: { min: width, max: width }
-                    },
-                };
-
-                console.log(hint);
-            }
-
-            navigator.mediaDevices.getUserMedia(hint).then(function (stream) {
-                video.srcObject = stream;
-                video.addEventListener('loadedmetadata', function () {
-                    video.play();
-
-                    console.log('video:', video, video.videoWidth, video.videoHeight);
-
-                    start(
-                        container,
-                        markers['4smallnew'],
-                        video,
-                        video.videoWidth,
-                        video.videoHeight,
-                        canvas,
-                        () => { },
-                        () => { },
-                        null
-                    );
-                });
+                    const tick = () => {
+                        sceneThreejs.draw();
+                        window.requestAnimationFrame(tick)
+                    }
+                    tick()
+                })
+            }).catch((error) => {
+                console.log(error);
             });
-        }
     </script>
 </body>
 
