--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>7</title>
+    <title>8</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.5, maximum-scale=1">
     <link rel="stylesheet" href="css/nft-style.css">
 </head>
@@ -11,10 +11,6 @@
 <body>
 
  
-<!--     <video loop autoplay muted webkit-playsinline playsinline crossOrigin="anonymous" id="arvideo">
-        <source src="https://johnnychiutw.github.io/test61/4.mp4" type='video/mp4'>
-    </video> -->
-    
      <video loop autoplay muted webkit-playsinline playsinline crossOrigin="anonymous" id="arvideo">
         <source src="https://johnnychiutw.github.io/test61/4.mp4" type='video/mp4'>
     </video>
@@ -24,7 +20,7 @@
     <script src="dist/ARnft.js"></script>
 
     <script>
-        ARnft.ARnft.init(640, 480, ["examples/DataNFT/pinball"], ['pinball'], 'config.json', true)
+        ARnft.ARnft.init(640, 480, ["DataNFT/4smallnew"], ['4smallnew'], 'config.json', true)
             .then((nft) => {
                 document.addEventListener('containerEvent', function (ev) {
 
