--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>17</title>
+    <title>18</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.5, maximum-scale=1">
     <link rel="stylesheet" href="css/nft-style.css">
 </head>
@@ -20,7 +20,7 @@
     <script src="dist/ARnft.js"></script>
 
     <script>
-        ARnft.ARnft.init(720, 480, ["test61/4smallnew"], ['4smallnew'], 'config.json', true)
+        ARnft.ARnft.init(720, 480, ["test61/4small1116"], ['4smallnew'], 'config.json', true)
             .then((nft) => {
                 document.addEventListener('containerEvent', function (ev) {
 
